# nrids-hackathon-2024

./: .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md
backend/: .env.example  .flake8  .isort.cfg  README.md  asgi.py  docker-compose.yml  manage.py  pyproject.toml  wsgi.py
backend/.build/nginx/: nginx.conf
backend/.build/script/: start_application.sh  start_gunicorn.sh
backend/.build/supervisor/: supervisor.conf
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/app/api/: __init__.py  urls.py  views.py
backend/app/api/park/: serializers.py  urls.py  views.py
backend/app/config/: logging.py
backend/app/config/settings/: __init__.py  base.py  local.py  production.py  test.py
backend/app/core/: __init__.py  models.py  urls.py
backend/app/core/migrations/: 0001_initial.py
backend/app/park/: admin.py  apps.py  models.py  utils.py
backend/app/park/data/: features.json  test.json
backend/app/park/fixtures/: park_Facility.json  park_Feature.json  park_Feedback.json  park_Park.json  park_Photo.json
backend/app/park/migrations/: 0001_initial.py  0002_alter_facility_options_and_more.py  0003_alter_facility_facility_category_and_more.py  0004_photo_file_url_alter_photo_file.py  0005_alter_feedback_facility.py  0006_remove_facility_facility_category_and_more.py  0007_rename_description_feedback_comments.py  0008_park_image.py  0009_park_data.py  0010_remove_park_image_remove_park_latitude_and_more.py  0011_feature_facility_park_facility_features.py  (+1 more)
backend/fixtures/: seed.json
frontend/: README.md  (+3 more)
(+32 files in other folders)
